@@ -147,7 +147,7 @@ public class CarRoutingTest {
     var linkingRequest = LinkingContextRequestMapper.map(request);
     var linkingContext = linkingContextFactory.create(temporaryVerticesContainer, linkingRequest);
     var gpf = new GraphPathFinder(null);
-    var paths = gpf.graphPathFinderEntryPoint(request, linkingContext);
+    var path = gpf.graphPathFinderEntryPoint(request, linkingContext);
 
     GraphPathToItineraryMapper graphPathToItineraryMapper = new GraphPathToItineraryMapper(
       new NoopSiteResolver(),
@@ -157,22 +157,20 @@ public class CarRoutingTest {
       graph.ellipsoidToGeoidDifference
     );
 
-    var itineraries = graphPathToItineraryMapper.mapItineraries(paths, request);
+    var itinerary = graphPathToItineraryMapper.mapToItinerary(path, request).get();
     temporaryVerticesContainer.close();
 
     // make sure that we only get CAR legs
-    itineraries.forEach(i ->
-      i
-        .legs()
-        .forEach(l -> {
-          if (l instanceof StreetLeg stLeg) {
-            assertEquals(TraverseMode.CAR, stLeg.getMode());
-          } else {
-            fail("Expected StreetLeg (CAR): " + l);
-          }
-        })
-    );
-    Geometry legGeometry = itineraries.get(0).legs().get(0).legGeometry();
+    itinerary
+      .legs()
+      .forEach(l -> {
+        if (l instanceof StreetLeg stLeg) {
+          assertEquals(TraverseMode.CAR, stLeg.getMode());
+        } else {
+          fail("Expected StreetLeg (CAR): " + l);
+        }
+      });
+    Geometry legGeometry = itinerary.legs().getFirst().legGeometry();
     return EncodedPolyline.of(legGeometry).points();
   }
 }
